[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.5.0", features = ["rt", "net", "sync", "macros", "time"] }
tokio-util = { version = "0.6.6", features = ["codec"] }
thiserror = "1.0.24"
bytes = "1.0.1"
log = "0.4.14"
futures = "0.3.14"
async-trait = "0.1.50"
